--- a/RentCar/wwwroot/css/site.css
+++ b/RentCar/wwwroot/css/site.css
@@ -11,7 +11,7 @@ ul.navbar-nav {
 
 a.navbar-brand{
     font-family:'Comic Sans MS';
-    margin-left:35px;
+    margin-left: 1em;
     text-decoration: none;
     font-weight: 900;
     font-size: 45px;
@@ -19,6 +19,7 @@ a.navbar-brand{
 
 ul.navbar-nav li a {
     text-decoration: none;
+    margin-left: 30px;
     /*list-style-type: none;*/
 }
 
@@ -43,11 +44,6 @@ a.navbar-brand:link{
 
 a.navbar-brand:visited {
     color: black;
-    text-decoration: underline;
-}
-
-a.navbar-brand:hover {
-    color: limegreen;
     text-decoration: underline;
 }
 
