Preparation to database implementation. Any changes in CSS files. Added directory with databases. Added class of data context ApplicationContext.cs

--- a/RentCar/Pages/Sign-in.cshtml
+++ b/RentCar/Pages/Sign-in.cshtml
@@ -6,6 +6,7 @@
 <div class="text-center">
     <h1 class="display-4">Sign in</h1>
     <p></p>
-    <p>Your email/login <input type ="text" </p>
+    <p>Your email/login <input type ="text" /> </p>
     <p>Your password <input type="password"> </p>
+    <button class="sign-in_button"> Sign-in </button>
 </div>
