--- a/RentCar/Pages/Reg.cshtml
+++ b/RentCar/Pages/Reg.cshtml
@@ -12,6 +12,8 @@
         <input type ="text" ><br>
         <label for="sname">Second Name</label><br>
         <input type="text"><br>
+        <label for="sname">Nickname</label><br>
+        <input type="text"><br>
         <label for="date-of-birth">Date of birth</label><br>
         <input type="text"><br>
         <label for="email">E-mail</label><br>
