Created start database of cars and users, prepairing to realize filters in catalog. Added CarSelect and CarPage pages for working with databases. Added User model and changed Car model.

--- a/RentCar/Pages/Catalog.cshtml
+++ b/RentCar/Pages/Catalog.cshtml
@@ -25,28 +25,28 @@
             <p class="filter"> <strong>Car body type filter: </strong></p> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/hatchback3d.png" width="30" height="30">Hatchback</a><br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/hatchback3d.png" width="30" height="30">Hatchback</a><br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/sport-car3d.png" width="30" height="30">Sportcar</a><br><br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/sport-car3d.png" width="30" height="30">Sportcar</a><br><br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/minivan3d.png" width="30" height="30">Minivan</a> <br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/minivan3d.png" width="30" height="30">Minivan</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/cabriolet3d.png" width="30" height="30">Cabriolet</a> <br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/cabriolet3d.png" width="30" height="30">Cabriolet</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/crossover3d.png" width="30" height="30">Crossover</a> <br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/crossover3d.png" width="30" height="30">Crossover</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/pick-up3d.png" width="30" height="30">Pick-up</a> <br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/pick-up3d.png" width="30" height="30">Pick-up</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/truck3d.png" width="30" height="30">Truck</a> <br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/truck3d.png" width="30" height="30">Truck</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/van3d.png" width="30" height="30">Van</a> <br>
+            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/van3d.png" width="30" height="30">Van</a> <br>
         </li>
     </ul>
 </div>
