--- a/RentCar/Pages/Shared/_Layout.cshtml
+++ b/RentCar/Pages/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                         <li class="catalog-nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Catalog">Catalog</a>
                         </li>
-                        @{bool isLogged = false;
+                        @{bool isLogged = true;
                         if(isLogged)
                         {
                                 <li class="My account">
