--- a/RentCar/Pages/Shared/_Layout.cshtml.css
+++ b/RentCar/Pages/Shared/_Layout.cshtml.css
@@ -1,7 +1,4 @@
-﻿ Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. 
-
-header{
+﻿header{
     background-color: limegreen;
 }
 
@@ -14,8 +11,6 @@ div.actual-date {
     background-color: #3b424a;
     padding: 5px;
 }
-
-
 
 a {
    color: #0a0a0a;
