--- a/RentCar/Pages/Reg.cshtml
+++ b/RentCar/Pages/Reg.cshtml
@@ -5,20 +5,40 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Registration</h1>
-     <p></p>
-     <div class="text-left">
-        <label for="fname">First name:</label><br>
+    <h1>Registration</h1>
+    <div class="text-left">
+        @*<label for="fname">First name:</label><br>
         <input type ="text" ><br>
         <label for="sname">Second Name</label><br>
         <input type="text"><br>
-        <label for="sname">Nickname</label><br>
-        <input type="text"><br>
-        <label for="date-of-birth">Date of birth</label><br>
-        <input type="text"><br>
-        <label for="email">E-mail</label><br>
-        <input type="email"><br>
         <label for="phone-num">Phone number</label><br>
         <input type="tel"><br>
+        <label for="password">Password</label><br>
+        <input type="password"><br>*@
+        
+        
+        <form method="post">
+            <p>
+                <label>Name</label><br />
+                <input type="text" name="Name" />
+            </p>
+            <p>
+                <label>Second name:</label><br />
+                <input type ="text" name="Sname" />
+            </p>
+            <p>
+                <label>Age:</label><br />
+                <input type="number" name="Age" />
+            </p>
+            <p>
+                <label>Phone number:</label><br />
+                <input type ="tel" name="age" />
+            </p>
+            <p>
+                <label>Password:</label><br />
+                <input type ="password" name="Password" />
+            </p>
+            <input type="submit" value="Submit" />
+        </form>
     </div>
 </div>
