--- a/RentCar/Pages/CarSelect.cshtml
+++ b/RentCar/Pages/CarSelect.cshtml
@@ -6,11 +6,11 @@
 
 <h1 class="h1CSP">Car select page </h1>
 <ul>
-	@{foreach (Car car in Car)
+	@*@{foreach (Car car in Car)
 	{
 		if(car.CarBody == carBody)
 		{
 			<li>/*CARDATA*/</li>
 		}
-	}}
+	}}*@
 </ul>
