--- a/RentCar/Pages/Catalog.cshtml
+++ b/RentCar/Pages/Catalog.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
 @model CatalogModel
+@using RentCar.Models
+@using static CarSelectModel
 @{
     ViewData["Title"] = "Catalog";
 }
@@ -25,34 +27,31 @@
             <p class="filter"> <strong>Car body type filter: </strong></p> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/hatchback3d.png" width="30" height="30">Hatchback</a><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Hatchback"><img src="~/Images/hatchback3d.png" width="30" height="30">Hatchback</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/sport-car3d.png" width="30" height="30">Sportcar</a><br><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=SportCar"><img src="~/Images/sport-car3d.png" width="30" height="30">Sportcar</a><br><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/minivan3d.png" width="30" height="30">Minivan</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Minivan"><img src="~/Images/minivan3d.png" width="30" height="30">Minivan</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/cabriolet3d.png" width="30" height="30">Cabriolet</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Cabriolet"><img src="~/Images/cabriolet3d.png" width="30" height="30">Cabriolet</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/crossover3d.png" width="30" height="30">Crossover</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Crossover"><img src="~/Images/crossover3d.png" width="30" height="30">Crossover</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/pick-up3d.png" width="30" height="30">Pick-up</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Pick-up"><img src="~/Images/pick-up3d.png" width="30" height="30">Pick-up</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/truck3d.png" width="30" height="30">Truck</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Truck"><img src="~/Images/truck3d.png" width="30" height="30">Truck</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelectAfterFilters"><img src="~/Images/van3d.png" width="30" height="30">Van</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Van"><img src="~/Images/van3d.png" width="30" height="30">Van</a> <br>
         </li>
     </ul>
 </div>
-<style>
-    
-</style>
     
 
 
