--- a/RentCar/Pages/Catalog.cshtml
+++ b/RentCar/Pages/Catalog.cshtml
@@ -8,18 +8,36 @@
 <h1>@ViewData["Catalog"]</h1>
 <h2>This is catalog. Let's choose the best option for you</h2><br>
 <div class="div-filters">
-    <ul class="price-filter">
+    <ul class="country-prod-filter">
         <li>
-            <p class="filter"> <strong>Price filter: </strong> </p> <br>
+            <p class="filter"> <strong>Country of production filter: </strong> </p> <br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/econom-car.png" width="30" height="30"/>Econom class</a><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Germany"><img src="~/Images/germany-flag.png" width="15" height="15" />Germany</a><br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/middle-car.png" width="30" height="30">Middle class</a><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Japan"><img src="~/Images/japan-flag.png" width="15" height="15">Japan</a><br>
         </li>
         <li>
-            <a class="filter-ref" href=""><img src="~/Images/premium-car.png" width="30" height="30">Premium class</a><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=USA"><img src="~/Images/united-states-flag.png" width="15" height="15">USA</a><br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Great Britain"><img src="~/Images/united-kingdom-flag.png" width="15" height="15">Great Britain</a><br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=France"><img src="~/Images/france-flag.png" width="15" height="15">France</a><br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Sweden"><img src="~/Images/sweden-flag.png" width="15" height="15">Sweden</a><br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Italy"><img src="~/Images/italy-flag.png" width="15" height="15">Italy</a><br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=China"><img src="~/Images/china-flag.png" width="15" height="15">China</a><br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Russia"><img src="~/Images/russia-flag.png" width="15" height="15">Russia</a><br>
         </li>
     </ul>
     <ul class="car-body-filter">
@@ -27,28 +45,31 @@
             <p class="filter"> <strong>Car body type filter: </strong></p> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Hatchback"><img src="~/Images/hatchback3d.png" width="30" height="30">Hatchback</a><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Hatchback&CountryOfProd=allCountries"><img src="~/Images/hatchback3d.png" width="20" height="20">Hatchback</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=SportCar"><img src="~/Images/sport-car3d.png" width="30" height="30">Sportcar</a><br><br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Sedan&CountryOfProd=allCountries"><img src="~/Images/sedan3d.png" width="20" height="20">Sedan</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Minivan"><img src="~/Images/minivan3d.png" width="30" height="30">Minivan</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=SportCar&CountryOfProd=allCountries"><img src="~/Images/sport-car3d.png" width="20" height="20">Sportcar</a><br><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Cabriolet"><img src="~/Images/cabriolet3d.png" width="30" height="30">Cabriolet</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Minivan&CountryOfProd=allCountries"><img src="~/Images/minivan3d.png" width="20" height="20">Minivan</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Crossover"><img src="~/Images/crossover3d.png" width="30" height="30">Crossover</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Cabriolet&CountryOfProd=allCountries"><img src="~/Images/cabriolet3d.png" width="20" height="20">Cabriolet</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Pick-up"><img src="~/Images/pick-up3d.png" width="30" height="30">Pick-up</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Crossover&CountryOfProd=allCountries"><img src="~/Images/crossover3d.png" width="20" height="20">Crossover</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Truck"><img src="~/Images/truck3d.png" width="30" height="30">Truck</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Pick-up&CountryOfProd=allCountries"><img src="~/Images/pick-up3d.png" width="20" height="20">Pick-up</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Van"><img src="~/Images/van3d.png" width="30" height="30">Van</a> <br>
+            <a class="filter-ref" href="/CarSelect?CarBody=Truck&CountryOfProd=allCountries"><img src="~/Images/truck3d.png" width="20" height="20">Truck</a> <br>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?CarBody=Van&CountryOfProd=allCountries"><img src="~/Images/van3d.png" width="20" height="20">Van</a> <br>
         </li>
     </ul>
 </div>
