A lot of changes: deleted directory "Databases", deleted directory "Fonts", added posibilities of registration, signing in ang logout, deleted rentcar.db because I wil use MS SQL Server instead SQLite henceforth. implementation and using Identity, created new directoy "Account" with Logout, MyAccount, Reg, Sign-in Razor Pages. A lot of changes in Sign-in.cshtml.cs, Program.cs and Reg.cshtml.cs files due to implementation Identity. Starting of money system development. Optimized all filters in Catalog (OnGet method accepts just one searching parameter now instead four parameters). In Cars.db added ImgPath column which stores path to image of specific car(any changes in CarSelect.cshtml due this).

--- a/RentCar/Pages/CarSelect.cshtml
+++ b/RentCar/Pages/CarSelect.cshtml
@@ -11,7 +11,7 @@
 	{
 		<li>
 			<div class="res_car">
-				<a href="/CarPage?CarBody=@car.CarBody"> <img class="car-img" alt="image coming s00n"/> </a>
+				<a href="/CarPage?CarBody=@car.CarBody"> <img class="car-img" src="@car.ImgPath" alt="image coming s00n"/> </a>
 				<div>
 					<a class="title" href="/CarPage?CarBody=@car.CarBody">@car.Brand @car.Model @car.YearOfProd</a><br>
 				</div>
