--- a/RentCar/Pages/Catalog.cshtml
+++ b/RentCar/Pages/Catalog.cshtml
@@ -10,66 +10,91 @@
 <div class="div-filters">
     <ul class="country-prod-filter">
         <li>
-            <p class="filter"> <strong>Country of production filter: </strong> </p> <br>
+            <p class="filter"> <strong>Country of production filter: </strong> </p>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Germany"><img src="~/Images/germany-flag.png" width="15" height="15" />Germany</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Germany"><img src="~/Images/germany-flag.png" width="15" height="15" />Germany</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Japan"><img src="~/Images/japan-flag.png" width="15" height="15">Japan</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Japan"><img src="~/Images/japan-flag.png" width="15" height="15">Japan</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=USA"><img src="~/Images/united-states-flag.png" width="15" height="15">USA</a><br>
+            <a class="filter-ref" href="/CarSelect?req=USA"><img src="~/Images/united-states-flag.png" width="15" height="15">USA</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Great Britain"><img src="~/Images/united-kingdom-flag.png" width="15" height="15">Great Britain</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Great Britain"><img src="~/Images/united-kingdom-flag.png" width="15" height="15">Great Britain</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=France"><img src="~/Images/france-flag.png" width="15" height="15">France</a><br>
+            <a class="filter-ref" href="/CarSelect?req=France"><img src="~/Images/france-flag.png" width="15" height="15">France</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Sweden"><img src="~/Images/sweden-flag.png" width="15" height="15">Sweden</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Sweden"><img src="~/Images/sweden-flag.png" width="15" height="15">Sweden</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Italy"><img src="~/Images/italy-flag.png" width="15" height="15">Italy</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Italy"><img src="~/Images/italy-flag.png" width="15" height="15">Italy</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=China"><img src="~/Images/china-flag.png" width="15" height="15">China</a><br>
+            <a class="filter-ref" href="/CarSelect?req=China"><img src="~/Images/china-flag.png" width="15" height="15">China</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=allBodies&CountryOfProd=Russia"><img src="~/Images/russia-flag.png" width="15" height="15">Russia</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Russia"><img src="~/Images/russia-flag.png" width="15" height="15">Russia</a><br>
         </li>
     </ul>
     <ul class="car-body-filter">
         <li>
-            <p class="filter"> <strong>Car body type filter: </strong></p> <br>
+            <p class="filter"> <strong>Car body type filter: </strong></p>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Hatchback&CountryOfProd=allCountries"><img src="~/Images/hatchback3d.png" width="20" height="20">Hatchback</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Hatchback"><img src="~/Images/hatchback3d.png" width="20" height="20">Hatchback</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Sedan&CountryOfProd=allCountries"><img src="~/Images/sedan3d.png" width="20" height="20">Sedan</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Sedan"><img src="~/Images/sedan3d.png" width="20" height="20">Sedan</a><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=SportCar&CountryOfProd=allCountries"><img src="~/Images/sport-car3d.png" width="20" height="20">Sportcar</a><br><br>
+            <a class="filter-ref" href="/CarSelect?req=SportCar"><img src="~/Images/sport-car3d.png" width="20" height="20">Sportcar</a><br><br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Minivan&CountryOfProd=allCountries"><img src="~/Images/minivan3d.png" width="20" height="20">Minivan</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Minivan"><img src="~/Images/minivan3d.png" width="20" height="20">Minivan</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Cabriolet&CountryOfProd=allCountries"><img src="~/Images/cabriolet3d.png" width="20" height="20">Cabriolet</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Cabriolet"><img src="~/Images/cabriolet3d.png" width="20" height="20">Cabriolet</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Crossover&CountryOfProd=allCountries"><img src="~/Images/crossover3d.png" width="20" height="20">Crossover</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Crossover"><img src="~/Images/crossover3d.png" width="20" height="20">Crossover</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Pick-up&CountryOfProd=allCountries"><img src="~/Images/pick-up3d.png" width="20" height="20">Pick-up</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Pick-up"><img src="~/Images/pick-up3d.png" width="20" height="20">Pick-up</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Truck&CountryOfProd=allCountries"><img src="~/Images/truck3d.png" width="20" height="20">Truck</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Truck"><img src="~/Images/truck3d.png" width="20" height="20">Truck</a> <br>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?CarBody=Van&CountryOfProd=allCountries"><img src="~/Images/van3d.png" width="20" height="20">Van</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Van"><img src="~/Images/van3d.png" width="20" height="20">Van</a> <br>
+        </li>
+    </ul>
+    <ul class="transmission-filter">
+        <li>
+            <p class="filter"> <strong>Transmition filter</strong></p>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?req=Mechanical"><img src="~/Images/mechanical-transmission.png" width="20" height="20" />Mechanical gearbox</a>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?req=Auto"><img src="~/Images/automatic-transmission.png" width="20" height="20" />Automatic gearbox</a>
+        </li>
+    </ul>
+    <ul class="drive-type-filter">
+        <li>
+            <p class="filter"> <strong>Drive type filter</strong></p>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?req=FWD"><img src="~/Images/FWD.png" width="20" height="20" />FWD</a>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?req=RWD"><img src="~/Images/RWD.png" width="20" height="20" />RWD</a>
+        </li>
+        <li>
+            <a class="filter-ref" href="/CarSelect?req=4x4"><img src="~/Images/4x4.png" width="20" height="20" />4x4</a>
         </li>
     </ul>
 </div>
