Added workable CarPage page. Deleted any images. Changed CSS files. Added background picture. And any other visual changes.

--- a/RentCar/Pages/Accounts/Sign-in.cshtml
+++ b/RentCar/Pages/Accounts/Sign-in.cshtml
@@ -4,19 +4,21 @@
     ViewData["Title"] = "Signing in";
 }
 
-<form method="post">
+<form class="sign-in-form" method="post">
     <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="model.Username"></label><br />
-        <input asp-for="model.Username" />
-        <span asp-validation-for="model.Username"></span>
-    </div>
-    <div>
-        <label asp-for="model.Password"></label><br />
-        <input asp-for="model.Password" />
-        <span asp-validation-for="model.Password"></span>
-    </div>
-    <div>
-        <input type="submit" value="Sign in" />
-    </div>
+        <h1 class="sign-in">Sign in</h1>
+        <div class="text-center">
+            <label asp-for="model.Username"></label><br />
+            <input asp-for="model.Username" />
+            <span asp-validation-for="model.Username"></span>
+        </div>
+        <div class="text-center">
+            <label asp-for="model.Password"></label><br />
+            <input asp-for="model.Password" />
+            <span asp-validation-for="model.Password"></span>
+        </div>
+        <div class="text-center">
+            <br />
+            <input type="submit" value="Sign in" />
+        </div>
 </form>
