--- a/RentCar/Pages/Catalog.cshtml
+++ b/RentCar/Pages/Catalog.cshtml
@@ -13,31 +13,31 @@
             <p class="filter"> <strong>Country of production filter: </strong> </p>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Germany"><img src="~/Images/germany-flag.png" width="15" height="15" />Germany</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Germany"><img class="filter-image" src="~/Images/germany-flag.png" width="14" height="14" />Germany</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Japan"><img src="~/Images/japan-flag.png" width="15" height="15">Japan</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Japan"><img class="filter-image" src="~/Images/japan-flag.png" width="14" height="14">Japan</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=USA"><img src="~/Images/united-states-flag.png" width="15" height="15">USA</a><br>
+            <a class="filter-ref" href="/CarSelect?req=United states"><img class="filter-image" src="~/Images/united states-flag.png" width="14" height="14">USA</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Great Britain"><img src="~/Images/united-kingdom-flag.png" width="15" height="15">Great Britain</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Great Britain"><img class="filter-image" src="~/Images/united kingdom-flag.png" width="14" height="14">Great Britain</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=France"><img src="~/Images/france-flag.png" width="15" height="15">France</a><br>
+            <a class="filter-ref" href="/CarSelect?req=France"><img class="filter-image" src="~/Images/france-flag.png" width="14" height="14">France</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Sweden"><img src="~/Images/sweden-flag.png" width="15" height="15">Sweden</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Sweden"><img class="filter-image" src="~/Images/sweden-flag.png" width="14" height="14">Sweden</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Italy"><img src="~/Images/italy-flag.png" width="15" height="15">Italy</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Italy"><img class="filter-image" src="~/Images/italy-flag.png" width="14" height="14">Italy</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=China"><img src="~/Images/china-flag.png" width="15" height="15">China</a><br>
+            <a class="filter-ref" href="/CarSelect?req=South Korea"><img class="filter-image" src="~/Images/south-korea-flag.png" width="14" height="14">South Korea</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Russia"><img src="~/Images/russia-flag.png" width="15" height="15">Russia</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Russia"><img class="filter-image" src="~/Images/russia-flag.png" width="14" height="14">Russia</a>
         </li>
     </ul>
     <ul class="car-body-filter">
@@ -45,31 +45,31 @@
             <p class="filter"> <strong>Car body type filter: </strong></p>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Hatchback"><img src="~/Images/hatchback3d.png" width="20" height="20">Hatchback</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Hatchback"><img src="~/Images/hatchback3d.png" width="20" height="20">Hatchback</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Sedan"><img src="~/Images/sedan3d.png" width="20" height="20">Sedan</a><br>
+            <a class="filter-ref" href="/CarSelect?req=Sedan"><img src="~/Images/sedan3d.png" width="20" height="20">Sedan</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=SportCar"><img src="~/Images/sport-car3d.png" width="20" height="20">Sportcar</a><br><br>
+            <a class="filter-ref" href="/CarSelect?req=SportCar"><img src="~/Images/sport-car3d.png" width="20" height="20">Sportcar</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Minivan"><img src="~/Images/minivan3d.png" width="20" height="20">Minivan</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Minivan"><img src="~/Images/minivan3d.png" width="20" height="20">Minivan</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Cabriolet"><img src="~/Images/cabriolet3d.png" width="20" height="20">Cabriolet</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Cabriolet"><img src="~/Images/cabriolet3d.png" width="20" height="20">Cabriolet</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Crossover"><img src="~/Images/crossover3d.png" width="20" height="20">Crossover</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Crossover"><img src="~/Images/crossover3d.png" width="20" height="20">Crossover</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Pick-up"><img src="~/Images/pick-up3d.png" width="20" height="20">Pick-up</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Pick-up"><img src="~/Images/pick-up3d.png" width="20" height="20">Pick-up</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Truck"><img src="~/Images/truck3d.png" width="20" height="20">Truck</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Truck"><img src="~/Images/truck3d.png" width="20" height="20">Truck</a>
         </li>
         <li>
-            <a class="filter-ref" href="/CarSelect?req=Van"><img src="~/Images/van3d.png" width="20" height="20">Van</a> <br>
+            <a class="filter-ref" href="/CarSelect?req=Van"><img src="~/Images/van3d.png" width="20" height="20">Van</a>
         </li>
     </ul>
     <ul class="transmission-filter">
