--- a/RentCar/Pages/Shared/_Layout.cshtml
+++ b/RentCar/Pages/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="My account">
-                                <a class="nav-link" href="/Accounts/MyAccount?nickname=@User">My account</a>
+                                <a class="nav-link" href="/Accounts/MyAccount?nickname=@User.Identity.Name">My account</a>
                             </li>
                         }
                         else
