Start of user roles developing. Added directories for admin and moderator roles.

--- a/RentCar/Pages/Accounts/MyAccount.cshtml
+++ b/RentCar/Pages/Accounts/MyAccount.cshtml
@@ -7,7 +7,7 @@
 <html>
     <body>
         <h1 class="hello-user">Hello @User.Identity.Name</h1>
-        <p class="money">Your money = @Model.CurrentUser.Money</p>
+        <p class="money">Your money =$@Model.CurrentUser.Money</p>
         <a href="/Accounts/Logout">Logout</a>
     </body>
 </html>
