--- a/RentCar/Pages/Accounts/Reg.cshtml
+++ b/RentCar/Pages/Accounts/Reg.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Registration</h2>
-<form method="post" asp-controller="Account" asp-action="Register">
+<form class="reg-form" method="post" asp-controller="Account" asp-action="Register">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="model.Username"></label><br />
