--- a/RentCar/Pages/Accounts/Reg.cshtml.css
+++ b/RentCar/Pages/Accounts/Reg.cshtml.css
@@ -7,3 +7,14 @@ h1{
     font-family: Calibri;
     color: limegreen;
 }
+
+.reg-form {
+    border-style: solid;
+    background-color: gray;
+    max-width: 400px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+   
+}
